# tocgen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: site_info
scripts/: update_version.sh
src/: main.cpp
